--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,25 @@
-fastapi==0.115.6
-uvicorn[standard]==0.34.0
-sqlalchemy==2.0.36
-asyncpg==0.30.0
 alembic==1.14.0
+annotated-types==0.7.0
+anyio==4.9.0
+asyncpg==0.30.0
+click==8.2.1
+fastapi==0.115.6
+greenlet==3.2.3
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
+Mako==1.3.10
+MarkupSafe==3.0.2
 pydantic==2.10.4
-python-multipart==0.0.12 
+pydantic_core==2.27.2
+python-dotenv==1.1.1
+python-multipart==0.0.12
+PyYAML==6.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+starlette==0.41.3
+typing_extensions==4.14.1
+uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
