--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -84,7 +84,11 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+asyncpg://antonuricin@localhost:5432/mydb
+# Use DATABASE_URL environment variable instead of hardcoded localhost
+# sqlalchemy.url = postgresql+asyncpg://antonuricin@localhost:5432/mydb
+sqlalchemy.url = 
+
+# Note: The actual URL will be read from DATABASE_URL environment variable in env.py
 
 
 [post_write_hooks]
